# hypothes-hs

./: .gitignore  README.md  hypothes-hs.cabal  stack.yaml
src/: HypothesisClient.hs
src/Hypothesis/: Aeson.hs  Base.hs  Client.hs  Mustache.hs
test/: Main.hs
