name:                hypothes-hs
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/msrdic/hypothes-hs#readme
license:             BSD3
license-file:        LICENSE
author:              Mladen Srdic
maintainer:          m.s.qubits@gmail.com
copyright:           2020 Mladen Srdic
category:            Web, Client
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library hypothesis-mustache
  hs-source-dirs:      src
  exposed-modules:     Hypothesis.Mustache
  other-modules:       Hypothesis.Base
  build-depends:       base >= 4.7 && < 5
                     , mustache
                     , hypothes-hs
                     , text
                     , aeson
  default-language:    Haskell2010
  ghc-options:
            -Wall
            -Werror
            -Wcompat
            -Wmissing-export-lists

library
  hs-source-dirs:      src
  exposed-modules:     Hypothesis.Base
                       Hypothesis.Client
  build-depends:       base >= 4.7 && < 5
                     , configurator
                     , text
                     , filepath
                     , wreq
                     , http-client
                     , lens
                     , bytestring
                     , lens-aeson
                     , aeson
                     , vector
                     , pretty-simple
  default-language:    Haskell2010
  ghc-options:
            -Wall
            -Werror
            -Wcompat
            -Wmissing-export-lists

source-repository head
  type:     git
  location: https://github.com/msrdic/hypothes-hs
